# open-payments-sigkit

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/cli/: package.json  tsconfig.json  vitest.config.ts
apps/cli/src/: index.ts  io.ts  output.ts  verification-material.ts
apps/cli/test/: cli.test.ts  verification-material.test.ts
apps/docs/: eslint.config.mjs  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/docs/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/docs/components/: code-block.tsx  collapsible-block.tsx  command-menu.tsx  copy-button.tsx  empty-state.tsx  example-switcher.tsx  examples-catalog.tsx  inspect-tool.tsx  key-value-list.tsx  loading-panel.tsx  page-header.tsx  result-card.tsx  (+10 more)
docs/: architecture.md  interop-guide.md  interop-status.md  presets.md  roadmap.md  verification-model.md
languages/python/: README.md  pyproject.toml
languages/python/examples/: _shared.py  inspect_example.py  sign_example.py  verify_example.py
languages/python/src/open_payments_http_signatures_devkit/: __init__.py  _constants.py  crypto.py  digest.py  errors.py  explain.py  http_components.py  inspect.py  key_resolution.py  presets.py  raw_request.py  remote_jwks.py  request.py  signature.py  signature_base.py  signature_input.py  signing.py  types.py  utils.py  verify.py
languages/python/tests/: fixtures.py  test_digest.py  test_explain.py  test_raw_request.py  test_sign_verify.py  test_signature_input.py
(+14 files in other folders)
